deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp
  namespace: taufik-devops
  labels:
    app: flaskapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: flaskapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp
  namespace: taufik-devops
  labels:
    app: flaskapp
    name : flaskapp
    keel.sh/approvals: "1"
    keel.sh/policy: major
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      name: flaskapp
      labels:
        app: flaskapp
    spec:
      imagePullSecrets:
        - name: gcr-json-key
      containers:
        - name: flaskapp
          image: gcr.io/wlb-dev/flaskapp:0.2.3-dev
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 256Mi
            limits:
              memory: 512Mi
